--- a/planner-service/package.json
+++ b/planner-service/package.json
@@ -4,19 +4,27 @@
   "description": "A service where users can manage their everyday tasks",
   "main": "app.js",
   "scripts": {
-    "start": "tsc && node ./dist/apps/todo-http-api/app.js",
+    "start": "nodemon ./apps/todo-http-api/app.ts",
+    "prod": "tsc && node ./dist/apps/todo-http-api/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "maestre3d",
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/mongoose": "^5.10.4",
+    "@types/nanoid": "^2.1.0",
+    "@types/node": "^14.14.35",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.12.2",
+    "nanoid": "^3.1.22"
   }
 }
