--- a/planner-service/package.json
+++ b/planner-service/package.json
@@ -4,11 +4,11 @@
   "description": "A service where users can manage their everyday tasks",
   "main": "app.js",
   "scripts": {
-    "start": "node ./dist/apps/todo-http-api/app.js",
+    "start": "node ./dist/apps/planner/app.js",
     "build": "rm -rf dist && tsc -p tsconfig.json",
     "watch": "nodemon --exec \"npm run build && npm run start\" --watch src --ext ts",
-    "watch_ts": "nodemon ./apps/todo-http-api/app.ts",
-    "prod": "tsc && node ./dist/apps/todo-http-api/app.js",
+    "watch_ts": "nodemon ./apps/planner/app.ts",
+    "prod": "tsc && node ./dist/apps/planner/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "maestre3d",
@@ -22,6 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
+    "mocha": "^8.3.2",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
