--- a/planner-service/package.json
+++ b/planner-service/package.json
@@ -17,8 +17,9 @@
     "@types/express": "^4.17.11",
     "@types/mongoose": "^5.10.4",
     "@types/nanoid": "^2.1.0",
-    "@types/node": "^14.14.35",
+    "@types/node": "^14.14.37",
     "@types/uuid": "^8.3.0",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "^7.22.0",
@@ -32,7 +33,9 @@
     "module-alias": "^2.2.2",
     "mongoose": "^5.12.2",
     "nanoid": "^3.1.22",
-    "uuid": "^8.3.2"
+    "tsyringe": "^4.5.0",
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
   },
   "_moduleAliases": {
     "@planner": "dist/src/planner",
