--- a/planner-service/package.json
+++ b/planner-service/package.json
@@ -35,7 +35,8 @@
     "nanoid": "^3.1.22",
     "tsyringe": "^4.5.0",
     "uuid": "^8.3.2",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.1"
   },
   "_moduleAliases": {
     "@planner": "dist/src/planner",
