--- a/planner-service/package.json
+++ b/planner-service/package.json
@@ -25,6 +25,7 @@
     "eslint": "^7.22.0",
     "mocha": "^8.3.2",
     "nodemon": "^2.0.7",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
